feat: Implement baisc JWT middleware
